# somunicate-model-selection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  THIRD-PARTY-LICENSES.txt  pyproject.toml  setup.cfg  zenodo.json
.github/workflows/: pre-commit.yaml  update-bot.yaml
app/: main.py
data/: dummy_audio_dataset.json
somunicate-model-selection/: DNN_models.py  dnn_models.py  evaluate_gridsearch_results.py  gridsearch_kfold_dnn.py  gridsearch_kfold_rf.py  train_best_models_dnn.py  train_best_models_rf.py
somunicate-model-selection/utils/: dataframe.py  dnn_model.py  evaluation.py  global_variables.json  gridsearch.py  gridsearch_tensor.py  loading.py  utils.py
somunicate_model_selection/: dnn_models.py  evaluate_gridsearch_results.py  gridsearch_kfold_dnn.py  gridsearch_kfold_rf.py  train_best_models_dnn.py  train_best_models_rf.py
somunicate_model_selection/utils/: dataframe.py  dnn_model.py  evaluation.py  gridsearch.py  gridsearch_tensor.py  loading.py
